...
    var body: some View {
        VStack(alignment: .center) {
            Spacer()
            if (isReview) {
                WebView(text: $text)
                    .frame(minWidth: 0, maxWidth: .infinity)
                    .accessibilityIdentifier("termsWebView")
                Divider()
            } else {

                Image("Files")
                    .renderingMode(.template)
                    .resizable()
...
                    Text("Review Terms of Use")
                        .frame(maxWidth: .infinity)
                }
                .buttonStyle(RoundedButtonStyle())
                .padding(.horizontal)
                .padding(.bottom)
                .accessibilityIdentifier("reviewTermsButton")
            }

            Button {
                onAccept()
            } label: {
                Text("Accept & Continue")
                    .frame(maxWidth: .infinity)
            }
            .buttonStyle(RoundedButtonStyle())
            .padding(.horizontal)
            .padding(.bottom)
            .accessibilityIdentifier("acceptTermsButton")

            Text("By tapping Accept & Continue, you agree to our Terms of Use.")
                .font(.system(size: 12.0))
        }
    }
}
...
