...
                            
                            VStack(spacing: 0) {
                                TextField(text: $label.value) {
                                    Text("Enter a label...")
                                }
                                .textFieldStyle(RoundedTextFieldStyle())
                                .accessibilityIdentifier("labelTextField")
                                .padding(.top)
                                
                                Text(label.isTooLong ? "Can't be longer than \(label.limit) characters" : " ")
                                    .multilineTextAlignment(.center)
                                    .foregroundStyle(Color.red)
                                    .font(.subheadline)
...
                                    }
                                }
                                .frame(maxWidth: .infinity)
                            }
                            .buttonStyle(RoundedButtonStyle())
                            .disabled(!label.isValid || inProgress)
                            .accessibilityIdentifier("saveButton")
                        }
                        .padding(.vertical)
                        .padding(.horizontal, 32)
                        .navigationInlineTitle("Save seed phrase")
                        .toolbar {
                            ToolbarItem(placement: .navigationBarLeading) {
...
