...
                    HStack {
                        Image(systemName: "arrowtriangle.left.fill")

                        Text("Previous")
                    }
                }
                .accessibilityIdentifier("previousWordSetButton")

                Spacer()

                Button {
                    page = (page + 1) % (phrase.count / 3)

...
                    HStack {
                        Text("Next")

                        Image(systemName: "arrowtriangle.right.fill")
                    }
                }
                .accessibilityIdentifier("nextWordSetButton")
            }
            .buttonStyle(PlainButtonStyle())
            .padding(20)

            Spacer()
        }
...
